[gd_scene load_steps=26 format=3 uid="uid://d0rmgd244h416"]

[ext_resource type="Script" path="res://AutoDataUpdater.gd" id="1_buvbv"]
[ext_resource type="Script" path="res://WebSocketClient.gd" id="1_wdu4v"]
[ext_resource type="Script" path="res://HTTPIO.gd" id="1_wt0ks"]
[ext_resource type="Script" path="res://AddressTextEdit.gd" id="2_hhqah"]
[ext_resource type="PackedScene" uid="uid://dqe2yocnmvlcn" path="res://DebugUI.tscn" id="2_hn5uq"]
[ext_resource type="Script" path="res://ConnectionStatusTextArea.gd" id="3_cgtxf"]
[ext_resource type="Script" path="res://ReceivingTextPacketsTextArea.gd" id="4_hhjqi"]
[ext_resource type="PackedScene" uid="uid://43sxev8pp7il" path="res://train-track-pieces/Curve.tscn" id="9_62217"]
[ext_resource type="PackedScene" uid="uid://bmmt37ihxnnpc" path="res://trash-can/TrashCan.tscn" id="9_g4d8y"]
[ext_resource type="Script" path="res://MainCamera.gd" id="9_wuc2u"]
[ext_resource type="PackedScene" uid="uid://o2cea8ct6kut" path="res://train-track-pieces/CurveFlippedVertically.tscn" id="10_irbpo"]
[ext_resource type="PackedScene" uid="uid://cem4mudpoky0f" path="res://train-track-pieces/HalfCurveFlippedVertically.tscn" id="10_x14bg"]
[ext_resource type="PackedScene" uid="uid://cnjwfs5m653vu" path="res://train-track-pieces/SwitchHalfCurve.tscn" id="11_20n4t"]
[ext_resource type="PackedScene" uid="uid://c456kspm3heqf" path="res://train-track-pieces/HalfCurve.tscn" id="11_uchv7"]
[ext_resource type="PackedScene" uid="uid://dr7u1ha37i8ef" path="res://train-track-pieces/HalfStraight.tscn" id="13_fyhmf"]
[ext_resource type="PackedScene" uid="uid://obvdt4u4q7q7" path="res://train-track-pieces/LongCurve.tscn" id="14_upbgr"]
[ext_resource type="PackedScene" uid="uid://cwd5itauoli0v" path="res://train-track-pieces/LongCurveFlippedVertically.tscn" id="15_huauf"]
[ext_resource type="PackedScene" uid="uid://dj8psrwvkj6cy" path="res://train-track-pieces/LongStraight.tscn" id="16_krvsw"]
[ext_resource type="PackedScene" uid="uid://hs6qdmposrki" path="res://train-track-pieces/QuarterStraight.tscn" id="17_7gt4f"]
[ext_resource type="PackedScene" uid="uid://b0w3ixbs5hk8o" path="res://train-track-pieces/Switch.tscn" id="18_ni8bv"]
[ext_resource type="PackedScene" uid="uid://ijyrsh28ejdj" path="res://train-track-pieces/SwitchFlippedVertically.tscn" id="19_7peel"]
[ext_resource type="PackedScene" uid="uid://ckxlfmmw0757c" path="res://train-track-pieces/SwitchHalfCurveFlippedVertically.tscn" id="21_igufp"]
[ext_resource type="PackedScene" uid="uid://cnule33nhmeqa" path="res://trains/Train.tscn" id="25_85y65"]
[ext_resource type="PackedScene" uid="uid://crb32reckktf4" path="res://nfc-tags/NFCTag.tscn" id="26_qm2qs"]

[sub_resource type="GDScript" id="GDScript_7igx0"]
script/source = "extends Node2D

func _on_AutoDataUpdater_timeout():
	# call all update methods (that will then call to send requests)
	
	# the Train Nodes inside $Trains are actually just pointing to the real Train Nodes that are in the path of the train track
#	for train in $Trains:
#		train.updateStatus()
	pass
"

[node name="Main" type="Node2D"]
script = SubResource("GDScript_7igx0")

[node name="AutoDataUpdater" type="Timer" parent="."]
autostart = true
script = ExtResource("1_buvbv")

[node name="HTTPIO" type="Node" parent="."]
script = ExtResource("1_wt0ks")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="WebSocketIO" type="Node" parent="."]
script = ExtResource("1_wdu4v")

[node name="NetworkingDebugUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AddressLabel" type="Label" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 35.0
offset_top = 17.0
offset_right = 129.0
offset_bottom = 43.0
text = "Address:"

[node name="AddressTextEdit" type="TextEdit" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 32.0
offset_top = 46.0
offset_right = 201.0
offset_bottom = 92.0
script = ExtResource("2_hhqah")

[node name="ConnectButton" type="Button" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 33.0
offset_top = 98.0
offset_right = 173.0
offset_bottom = 129.0
text = "Connect"

[node name="ConnectionStatusTextArea" type="TextEdit" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 34.0
offset_top = 134.0
offset_right = 771.0
offset_bottom = 209.0
text = "None"
editable = false
script = ExtResource("3_cgtxf")

[node name="SendTextPacketLabel" type="Label" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 34.0
offset_top = 205.0
offset_right = 128.0
offset_bottom = 231.0
text = "Text Packet:"

[node name="SendTextPacketTextEdit" type="TextEdit" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 32.0
offset_top = 228.0
offset_right = 390.0
offset_bottom = 371.0

[node name="SendTextPacketButton" type="Button" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 33.0
offset_top = 375.0
offset_right = 173.0
offset_bottom = 406.0
text = "Send Text Packet"

[node name="ReceivingTextPacketsTextArea" type="TextEdit" parent="NetworkingDebugUI"]
layout_mode = 0
offset_left = 33.0
offset_top = 419.0
offset_right = 498.0
offset_bottom = 630.0
editable = false
script = ExtResource("4_hhjqi")

[node name="a" type="TextEdit" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 764.0
offset_top = 166.0
offset_right = 956.0
offset_bottom = 203.0
text = "10.0.0.2"

[node name="a2" type="TextEdit" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 762.0
offset_top = 205.0
offset_right = 954.0
offset_bottom = 242.0
text = "10.0.0.3"

[node name="a3" type="TextEdit" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 963.0
offset_top = 167.0
offset_right = 1155.0
offset_bottom = 204.0
text = "None"
editable = false

[node name="a4" type="TextEdit" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 961.0
offset_top = 206.0
offset_right = 1153.0
offset_bottom = 243.0
text = "None"
editable = false

[node name="Button" type="Button" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 254.0
offset_right = 1095.0
offset_bottom = 292.0
text = "Reconnect Disconnected Nodes"

[node name="Button2" type="Button" parent="NetworkingDebugUI"]
visible = false
layout_mode = 0
offset_left = 769.0
offset_top = 295.0
offset_right = 1096.0
offset_bottom = 333.0
text = "Disconnect+Reconnect All Nodes"

[node name="DebugUI" parent="." instance=ExtResource("2_hn5uq")]
offset_top = 176.0
offset_bottom = 176.0

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("9_wuc2u")

[node name="Instructions" type="Label" parent="."]
offset_left = 88.0
offset_top = 13.0
offset_right = 475.0
offset_bottom = 140.0
mouse_filter = 1
text = "Pan with Ctrl + Mouse Left or just Space or Mouse Midle
Zoom with Mouse Wheel
Drag and Drop with Muse Left
Press Delete to toggle Trash Mode (click on track pieces to remove them)
Remove Track Piece by Dragging  itin the Tash
There are More Train Track Pieces on Right and Top
"

[node name="TrashCan" parent="." instance=ExtResource("9_g4d8y")]
unique_name_in_owner = true

[node name="TrainTrackPieces" type="Node2D" parent="."]

[node name="CurveSpawner" parent="TrainTrackPieces" instance=ExtResource("9_62217")]
position = Vector2(1334, -112)
is_spawner = true

[node name="CurveFlippedVerticallySpawner" parent="TrainTrackPieces" instance=ExtResource("10_irbpo")]
position = Vector2(1323, -287)
is_spawner = true

[node name="HalfCurveSpawner" parent="TrainTrackPieces" instance=ExtResource("11_uchv7")]
position = Vector2(1304, -458)
is_spawner = true

[node name="HalfCurveFlippedVerticallySpawner" parent="TrainTrackPieces" instance=ExtResource("10_x14bg")]
position = Vector2(1304, -636)
is_spawner = true

[node name="HalfStraightSpawner" parent="TrainTrackPieces" instance=ExtResource("13_fyhmf")]
position = Vector2(1037, 61)
is_spawner = true

[node name="LongCurveSpawner" parent="TrainTrackPieces" instance=ExtResource("14_upbgr")]
position = Vector2(1334, 254)
is_spawner = true

[node name="LongCurveFlippedVerticallySpawner" parent="TrainTrackPieces" instance=ExtResource("15_huauf")]
position = Vector2(1334, 60)
is_spawner = true

[node name="LongStraightSpawner" parent="TrainTrackPieces" instance=ExtResource("16_krvsw")]
position = Vector2(1046, 239)
is_spawner = true

[node name="QuarterStraightSpawner" parent="TrainTrackPieces" instance=ExtResource("17_7gt4f")]
position = Vector2(1039, -105)
is_spawner = true

[node name="SwitchSpawner" parent="TrainTrackPieces" instance=ExtResource("18_ni8bv")]
position = Vector2(1683, 261)
is_spawner = true

[node name="SwitchFlippedVerticallySpawner" parent="TrainTrackPieces" instance=ExtResource("19_7peel")]
position = Vector2(1683, 0)
is_spawner = true

[node name="SwitchHalfCurveSpawner" parent="TrainTrackPieces" instance=ExtResource("11_20n4t")]
position = Vector2(1683, -190)
is_spawner = true

[node name="SwitchHalfCurveVerticallyFlippedSpawner" parent="TrainTrackPieces" instance=ExtResource("21_igufp")]
position = Vector2(1683, -414)
is_spawner = true

[node name="BaseTrainTrackPiece" parent="TrainTrackPieces" instance=ExtResource("18_ni8bv")]
position = Vector2(594, 1599)

[node name="Trains" type="Node2D" parent="."]

[node name="TrainSpawner" parent="Trains" instance=ExtResource("25_85y65")]
position = Vector2(844, 49)

[node name="NFCTags" type="Node2D" parent="."]

[node name="NFCTag" parent="NFCTags" instance=ExtResource("26_qm2qs")]
position = Vector2(844, 129)

[node name="BaseTrainTrackPiece109" parent="." instance=ExtResource("18_ni8bv")]
position = Vector2(2524, 1096)
rotation = -1.57079

[node name="BaseTrainTrackPiece74" parent="." instance=ExtResource("18_ni8bv")]
position = Vector2(865, 572)

[node name="BaseTrainTrackPiece4" parent="." instance=ExtResource("9_62217")]
position = Vector2(153, 779)
rotation = -1.56738

[node name="BaseTrainTrackPiece12" parent="." instance=ExtResource("9_62217")]
position = Vector2(202, 667)
rotation = -1.16101

[node name="BaseTrainTrackPiece13" parent="." instance=ExtResource("9_62217")]
position = Vector2(292, 581)
rotation = -0.781287

[node name="BaseTrainTrackPiece14" parent="." instance=ExtResource("9_62217")]
position = Vector2(407, 532)
rotation = -0.409542

[node name="BaseTrainTrackPiece2" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(398, 1537)
rotation = 0.400718

[node name="BaseTrainTrackPiece6" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(285, 1490)
rotation = 0.77478

[node name="BaseTrainTrackPiece7" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(198, 1403)
rotation = 1.19001

[node name="BaseTrainTrackPiece8" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(152, 1289)
rotation = 1.57724

[node name="BaseTrainTrackPiece9" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(664, 1282)
rotation = 0.379408

[node name="BaseTrainTrackPiece52" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1177, 1396)
rotation = 0.00457264

[node name="BaseTrainTrackPiece53" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1291, 1351)
rotation = -0.381844

[node name="BaseTrainTrackPiece54" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1380, 1266)
rotation = -0.751667

[node name="BaseTrainTrackPiece55" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1430, 1152)
rotation = -1.15824

[node name="BaseTrainTrackPiece32" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(547, 1234)
rotation = 0.798602

[node name="BaseTrainTrackPiece33" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(461, 1145)
rotation = 1.20308

[node name="BaseTrainTrackPiece99" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2592, 904)
rotation = -1.17001

[node name="BaseTrainTrackPiece50" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2214, 1672)
rotation = 0.00106107

[node name="BaseTrainTrackPiece104" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2328, 1625)
rotation = -0.395303

[node name="BaseTrainTrackPiece105" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2415, 1537)
rotation = -0.798021

[node name="BaseTrainTrackPiece106" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2462, 1422)
rotation = -1.17416

[node name="BaseTrainTrackPiece102" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2079, 1543)
rotation = -0.419529

[node name="BaseTrainTrackPiece103" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2163, 1452)
rotation = -0.839197

[node name="BaseTrainTrackPiece44" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1414, 1540)
rotation = 0.00781473

[node name="BaseTrainTrackPiece45" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1888, 1357)
rotation = -0.389727

[node name="BaseTrainTrackPiece85" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1977, 1269)
rotation = -0.769502

[node name="BaseTrainTrackPiece86" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(2027, 1153)
rotation = -1.17032

[node name="BaseTrainTrackPiece36" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(415, 1030)
rotation = 1.56892

[node name="BaseTrainTrackPiece30" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(791, 1281)
rotation = 0.0107288

[node name="BaseTrainTrackPiece31" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1027, 1186)
rotation = -0.376829

[node name="BaseTrainTrackPiece57" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1117, 1098)
rotation = -0.771123

[node name="BaseTrainTrackPiece58" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(1167, 986)
rotation = -1.14268

[node name="BaseTrainTrackPiece23" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(785, 1669)
rotation = 0.411286

[node name="BaseTrainTrackPiece17" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(334, 1273)
rotation = 1.11492

[node name="BaseTrainTrackPiece18" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(426, 1355)
rotation = 0.736819

[node name="BaseTrainTrackPiece20" parent="." instance=ExtResource("10_irbpo")]
position = Vector2(542, 1397)
rotation = 0.342431

[node name="BaseTrainTrackPiece101" parent="." instance=ExtResource("19_7peel")]
position = Vector2(1899, 1632)

[node name="BaseTrainTrackPiece64" parent="." instance=ExtResource("19_7peel")]
position = Vector2(1884, 572)
rotation = -3.14159

[node name="BaseTrainTrackPiece11" parent="." instance=ExtResource("19_7peel")]
position = Vector2(193, 978)
rotation = 1.57079

[node name="BaseTrainTrackPiece5" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(778, 1548)

[node name="BaseTrainTrackPiece15" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(272, 1162)
rotation = 1.16489

[node name="BaseTrainTrackPiece93" parent="." instance=ExtResource("9_62217")]
position = Vector2(2342, 534)

[node name="BaseTrainTrackPiece94" parent="." instance=ExtResource("9_62217")]
position = Vector2(2456, 581)
rotation = 0.388687

[node name="BaseTrainTrackPiece95" parent="." instance=ExtResource("9_62217")]
position = Vector2(2543, 668)
rotation = 0.790599

[node name="BaseTrainTrackPiece96" parent="." instance=ExtResource("9_62217")]
position = Vector2(2591, 782)
rotation = 1.163

[node name="BaseTrainTrackPiece111" parent="." instance=ExtResource("9_62217")]
position = Vector2(2212, 666)

[node name="BaseTrainTrackPiece112" parent="." instance=ExtResource("9_62217")]
position = Vector2(2326, 713)
rotation = 0.388687

[node name="BaseTrainTrackPiece113" parent="." instance=ExtResource("9_62217")]
position = Vector2(2413, 800)
rotation = 0.790599

[node name="BaseTrainTrackPiece114" parent="." instance=ExtResource("9_62217")]
position = Vector2(2461, 914)
rotation = 1.163

[node name="BaseTrainTrackPiece37" parent="." instance=ExtResource("9_62217")]
position = Vector2(414, 904)
rotation = -1.58001

[node name="BaseTrainTrackPiece76" parent="." instance=ExtResource("9_62217")]
position = Vector2(461, 792)
rotation = -1.15474

[node name="BaseTrainTrackPiece77" parent="." instance=ExtResource("9_62217")]
position = Vector2(549, 707)
rotation = -0.773756

[node name="BaseTrainTrackPiece78" parent="." instance=ExtResource("9_62217")]
position = Vector2(662, 662)
rotation = -0.379725

[node name="BaseTrainTrackPiece65" parent="." instance=ExtResource("9_62217")]
position = Vector2(1045, 660)
rotation = 0.411707

[node name="BaseTrainTrackPiece66" parent="." instance=ExtResource("9_62217")]
position = Vector2(1130, 749)
rotation = 0.821201

[node name="BaseTrainTrackPiece75" parent="." instance=ExtResource("9_62217")]
position = Vector2(1172, 866)
rotation = 1.2348

[node name="BaseTrainTrackPiece60" parent="." instance=ExtResource("9_62217")]
position = Vector2(1454, 905)
rotation = -1.55102

[node name="BaseTrainTrackPiece61" parent="." instance=ExtResource("9_62217")]
position = Vector2(1502, 794)
rotation = -1.16235

[node name="BaseTrainTrackPiece62" parent="." instance=ExtResource("9_62217")]
position = Vector2(1589, 709)
rotation = -0.777901

[node name="BaseTrainTrackPiece100" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2473, 1296)
rotation = 1.57079

[node name="BaseTrainTrackPiece92" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2084, 521)

[node name="BaseTrainTrackPiece110" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2214, 522)

[node name="BaseTrainTrackPiece87" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2039, 1028)
rotation = 1.57079

[node name="BaseTrainTrackPiece63" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1699, 651)
rotation = -0.408509

[node name="BaseTrainTrackPiece56" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1442, 1029)
rotation = -1.57079

[node name="BaseTrainTrackPiece46" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1533, 1505)
rotation = -0.367261

[node name="BaseTrainTrackPiece47" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1653, 1459)
rotation = -0.367261

[node name="BaseTrainTrackPiece48" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1773, 1414)
rotation = -0.367261

[node name="BaseTrainTrackPiece34" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(912, 1243)
rotation = -0.38242

[node name="BaseTrainTrackPiece21" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(669, 1404)

[node name="BaseTrainTrackPiece22" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(796, 1405)

[node name="BaseTrainTrackPiece24" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(912, 1681)

[node name="BaseTrainTrackPiece25" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1042, 1682)

[node name="BaseTrainTrackPiece38" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1172, 1682)

[node name="BaseTrainTrackPiece39" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1304, 1682)

[node name="BaseTrainTrackPiece40" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1435, 1682)

[node name="BaseTrainTrackPiece41" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1566, 1683)

[node name="BaseTrainTrackPiece49" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1698, 1683)

[node name="BaseTrainTrackPiece79" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1299, 653)

[node name="BaseTrainTrackPiece80" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1429, 654)

[node name="BaseTrainTrackPiece81" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1559, 654)

[node name="BaseTrainTrackPiece82" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1691, 654)

[node name="BaseTrainTrackPiece83" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1822, 654)

[node name="BaseTrainTrackPiece84" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1953, 655)

[node name="BaseTrainTrackPiece88" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2085, 655)

[node name="BaseTrainTrackPiece107" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2086, 1683)

[node name="BaseTrainTrackPiece51" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2216, 1338)
rotation = -1.22008

[node name="BaseTrainTrackPiece108" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(2261, 1217)
rotation = -1.22008

[node name="BaseTrainTrackPiece59" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(663, 521)

[node name="BaseTrainTrackPiece73" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(533, 521)

[node name="BaseTrainTrackPiece67" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1052, 521)

[node name="BaseTrainTrackPiece68" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1182, 521)

[node name="BaseTrainTrackPiece69" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1311, 521)

[node name="BaseTrainTrackPiece70" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1440, 521)

[node name="BaseTrainTrackPiece89" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(913, 653)

[node name="BaseTrainTrackPiece115" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(785, 653)

[node name="BaseTrainTrackPiece90" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1042, 653)

[node name="BaseTrainTrackPiece91" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1171, 653)

[node name="BaseTrainTrackPiece71" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1569, 521)

[node name="BaseTrainTrackPiece72" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1698, 521)

[node name="BaseTrainTrackPiece42" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1160, 1549)

[node name="BaseTrainTrackPiece43" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1287, 1550)

[node name="BaseTrainTrackPiece26" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(905, 1548)

[node name="BaseTrainTrackPiece27" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1032, 1549)

[node name="BaseTrainTrackPiece28" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(923, 1405)

[node name="BaseTrainTrackPiece29" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(1050, 1406)

[node name="BaseTrainTrackPiece19" parent="." instance=ExtResource("16_krvsw")]
position = Vector2(142, 1163)
rotation = 1.57079

[connection signal="timeout" from="AutoDataUpdater" to="." method="_on_AutoDataUpdater_timeout"]
[connection signal="connection_closed" from="WebSocketIO" to="NetworkingDebugUI/ConnectionStatusTextArea" method="_on_web_socket_io_connection_closed"]
[connection signal="connection_failed" from="WebSocketIO" to="NetworkingDebugUI/ConnectionStatusTextArea" method="_on_web_socket_io_connection_failed"]
[connection signal="connection_opened" from="WebSocketIO" to="NetworkingDebugUI/ConnectionStatusTextArea" method="_on_web_socket_io_connection_opened"]
[connection signal="text_packet_received" from="WebSocketIO" to="NetworkingDebugUI/ReceivingTextPacketsTextArea" method="_on_web_socket_io_text_packet_received"]
[connection signal="pressed" from="NetworkingDebugUI/ConnectButton" to="WebSocketIO" method="_on_connect_button_pressed"]
[connection signal="pressed" from="NetworkingDebugUI/ConnectButton" to="NetworkingDebugUI/ConnectionStatusTextArea" method="_on_connect_button_pressed"]
[connection signal="pressed" from="NetworkingDebugUI/SendTextPacketButton" to="WebSocketIO" method="_on_send_text_packet_button_pressed"]
